# ml-ops2

./: .pre-commit-config.yaml  iris_pickle.pkl  pyproject.toml  results.csv  run.py
.dvc/: config
mlruns/0/: meta.yaml
mlruns/0/0b9d1356b8404732a1f08c83e2ce0475/: meta.yaml
mlruns/0/1c5892c3afea48d7890b063347e57e61/: meta.yaml
mlruns/0/1c9bc8cb1e154f3bb146c9650fe2e01a/: meta.yaml
mlruns/0/1fa1b500e2ef4252a9599237d358f5e2/: meta.yaml
mlruns/0/21ee97e8224243b08a196bd1f41777c6/: meta.yaml
mlruns/0/257f821e68034f7fb84913c26a848857/: meta.yaml
mlruns/0/296b821f54264bd1a1232e33c5a07230/: meta.yaml
mlruns/0/344b3309724b41959bc7f7c116cb4cca/: meta.yaml
mlruns/0/389229256b3c49e38f050fff9cd13ada/: meta.yaml
mlruns/0/3d543c3eb40147e99f2135e4706f94d3/: meta.yaml
mlruns/0/3f18cd67f9304e199813fe7838b39dcc/: meta.yaml
mlruns/0/42707183fd0e437287544600c08cf84d/: meta.yaml
mlruns/0/4668422727fe4fb39972e7abd79298a3/: meta.yaml
mlruns/0/495d5ba3c05f4da594d0b60272bab7ef/: meta.yaml
mlruns/0/4a7483b3d1a749f9835dbb8e317b3f73/: meta.yaml
mlruns/0/4c618056d9c34a2597bd00b07974aee8/: meta.yaml
mlruns/0/4ea81472b3074ad5b38066bb86940d39/: meta.yaml
mlruns/0/5896b19a98964e6b8ba9d456357b9958/: meta.yaml
mlruns/381350324328430135/: meta.yaml
mlruns/480915989656679392/: meta.yaml
mlruns/624351662247257357/: meta.yaml
mlruns/675781561226178258/: meta.yaml
mlruns/728571498803293364/: meta.yaml
mlruns/978577843132233133/: meta.yaml
model/: infer.py  iris_model.pkl  train.py
model/configs/: config.yaml
outputs/2023-12-01/02-36-42/.hydra/: hydra.yaml
(+297 files in other folders)
