[tool.poetry]
name = "ml-project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pendulum = "^2.1.2"
torch = "^2.0.1"
numpy = "^1.22.4"
pandas = "^1.1.5"
tqdm = "^4.66.1"
scikit-learn = "^1.3.1"
matplotlib = "^3.7"
hydra = "^2.1"
omegaconf = "^2.3.0"
dvc = "^3.30.3"
mlflow = "^2.8.1"
dvc-gdrive = "^2.20.0"
pathlib = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
